--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="notepad-app"></div>
 </body>
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="./UI/menubar/menubar.js"></script>
 <script src="./UI/editor/editor.js"></script>
 <script src="./UI/statusbar/statusbar.js"></script>
